--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,8 @@
     "outDir": "./out-tsc/app-server",
     "module": "commonjs",
     "types": [
-      "node"
+      "node",
+      "@angular/localize"
     ]
   },
   "files": [
