--- a/package.json
+++ b/package.json
@@ -95,12 +95,12 @@
     "@nguniversal/builders": "^12.1.3",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.40.3",
-    "@types/jasmine": "^3.6.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.20.5",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
