--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "slick-carousel": "^1.8.1",
     "summernote": "^0.8.18",
     "tslib": "^2.0.0",
-    "zone.js": "^0.11.8"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.18",
