@angular/cli migration - replace-deprecated-prod-flag
Replace the deprecated '--prod' in package.json scripts.

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "node --max_old_space_size=4048 node_modules/@angular/cli/bin/ng build",
-    "build:prod": "npm run build -- --prod",
+    "build:prod": "npm run build -- --configuration production",
     "build:prod:aot": "npm run build:prod -- --aot",
-    "build:stage": "npm run build -- --prod --c=stage",
+    "build:stage": "npm run build -- --configuration production --c=stage",
     "serve": "node --max_old_space_size=3048 node_modules/@angular/cli/bin/ng serve --port 2002",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run medical-app:serve-ssr",
     "serve:ssr": "node dist/medical-app/server/main.js",
-    "build:ssr": "ng build --prod && ng run medical-app:server:production",
+    "build:ssr": "ng build --configuration production && ng run medical-app:server:production",
     "prerender": "ng run medical-app:prerender"
   },
   "private": true,
