--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "@alyle/ui": "^15.0.0",
     "@angular/animations": "^15.2.9",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "~15.2.9",
-    "@angular/compiler": "~15.2.9",
-    "@angular/core": "~14.3.0",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^14.3.0",
     "@angular/fire": "^7.6.1",
-    "@angular/forms": "~15.2.9",
+    "@angular/forms": "^15.2.9",
     "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "~15.2.9",
-    "@angular/platform-browser-dynamic": "~15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/platform-server": "^15.2.9",
-    "@angular/router": "~15.2.9",
+    "@angular/router": "^15.2.9",
     "@auth0/angular-jwt": "^5.0.1",
     "@ismaestro/ngx-scroll-to-first-invalid": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
@@ -89,8 +89,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.12",
     "@angular/cli": "^14.2.12",
-    "@angular/compiler-cli": "~15.2.9",
-    "@angular/language-service": "~15.2.9",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
     "@angular/localize": "^16.1.8",
     "@nguniversal/builders": "^14.2.3",
     "@types/express": "^4.17.0",
