--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "@ngx-loading-bar/http-client": "^5.0.2",
     "@ngx-loading-bar/router": "^5.0.2",
     "@swimlane/ngx-datatable": "^20.1.0",
-    "@types/google-maps": "^3.2.2",
+    "@types/google.maps": "^3.2.2",
     "angularx-social-login": "^3.4.1",
     "bootstrap": "^4.5.3",
     "express": "^4.15.2",
     "firebase": "^8.3.0",
+    "google-maps": "^4.3.3",
     "jquery": "^3.6.0",
     "jquery.cookie": "^1.4.1",
     "js-marker-clusterer": "^1.0.0",
