--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:ssr": "ng run medical-app:serve-ssr",
+    "dev:ssr": "node --max-old-space-size=4096 node_modules/@angular/cli/bin/ng run medical-app:serve-ssr",
     "serve:ssr": "node dist/medical-app/server/main.js",
     "build:ssr": "ng build --configuration production && ng run medical-app:server:production",
     "prerender": "ng run medical-app:prerender"
